chore: ai changes

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -8,3 +8,12 @@ ProjectID=9EE2A33445D3A83725F773A1A6859A01
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/MoviePlayer.MoviePlayerSettings]
+bWaitForMoviesToComplete=True
+bMoviesAreSkippable=True
++StartupMovies=UE_moving_logo_v04_4k
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
